# sp_log2

./: Cargo.toml  LICENSE  README.md  REAMDE.md
.github/workflows/: ci.yml
examples/: custom_colors.rs  default_colors.rs  rgb_colors.rs  usage.rs
examples/paris_demo/: Cargo.toml
examples/paris_demo/src/: main.rs
src/: config.rs  lib.rs
src/loggers/: comlog.rs  filelog.rs  logging.rs  mod.rs  splog.rs  termlog.rs  writelog.rs
