[package]
name = "sp_log2"
version = "0.0.7"
edition = "2021"
authors = ["0xJWLabs <0xJWLabs@gmail.com>"]
description = "A simple and easy way of logging for Rust's log crate"
documentation = "https://docs.rs/sp_log2/"
repository = "https://github.com/0xJWLabs/sp_log2"
readme = "README.md"
keywords = ["log", "sp_log", "filelog", "logging"]
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[features]
default =["local-offset"]
local-offset = ["time/local-offset"]

[dependencies]
log = { version = "0.4.*", features = ["std"] }
time = { version = "0.3.37", features = ["formatting", "macros"] }
termcolor = { version = "1.1" }
