[package]
name = "sp_log2"
version = "0.1.3"
edition = "2021"
authors = ["0xJWLabs <0xJWLabs@gmail.com>"]
description = "A simple and easy way of logging for Rust's log crate"
documentation = "https://docs.rs/sp_log2/"
repository = "https://github.com/0xJWLabs/sp_log2"
readme = "README.md"
keywords = ["log", "sp_log", "filelog", "logging"]
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
log = { version = "0.4.*", features = ["std"] }
chrono = "0.4.39"
termcolor2 = { version = "0.1.1" }
